// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IgnoreAutoLayoutToggle snapshots > should render the active button 1`] = `
<DocumentFragment>
  <button
    aria-label="Ignore auto layout"
    aria-pressed="true"
    class="_ButtonIcon_2062db _ButtonIcon--selected_2062db"
    data-state="closed"
    type="button"
  >
    <svg
      class="Icon"
      data-fpl-icon-size="24"
      fill="none"
      height="24"
      style="color: var(--color-neutral-1);"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M6 7a1 1 0 0 1 1-1h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0zm12 0a1 1 0 0 0-1-1h-2.5a.5.5 0 0 0 0 1H17v2.5a.5.5 0 0 0 1 0zM7 18a1 1 0 0 1-1-1v-2.5a.5.5 0 0 1 1 0V17h2.5a.5.5 0 0 1 0 1zm11-1a1 1 0 0 1-1 1h-2.5a.5.5 0 0 1 0-1H17v-2.5a.5.5 0 0 1 1 0zm-8-7h4v4h-4zm-1 0a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1z"
        data-svg-property="fill"
        fill="white"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`IgnoreAutoLayoutToggle snapshots > should render the inactive button 1`] = `
<DocumentFragment>
  <button
    aria-label="Ignore auto layout"
    aria-pressed="false"
    class="_ButtonIcon_2062db"
    data-state="closed"
    type="button"
  >
    <svg
      class="Icon"
      data-fpl-icon-size="24"
      fill="none"
      height="24"
      style="color: var(--color-neutral-1);"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M6 7a1 1 0 0 1 1-1h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0zm12 0a1 1 0 0 0-1-1h-2.5a.5.5 0 0 0 0 1H17v2.5a.5.5 0 0 0 1 0zM7 18a1 1 0 0 1-1-1v-2.5a.5.5 0 0 1 1 0V17h2.5a.5.5 0 0 1 0 1zm11-1a1 1 0 0 1-1 1h-2.5a.5.5 0 0 1 0-1H17v-2.5a.5.5 0 0 1 1 0zm-8-7h4v4h-4zm-1 0a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1z"
        data-svg-property="fill"
        fill="white"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</DocumentFragment>
`;
